--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
 
     <div class="credits">
-      <p>Made with ❤ by Jo Kevin Nathaniel | &copy; 2023</p>
+      <p>Made with ❤ by Kelompok KKN C5 | &copy; 2023</p>
     </div>
   </footer>
   <!-- Footer End -->
