--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="row">
                   <x-feathericon-user />
-                  <h3 class="menu-card-title">phone : 0813-4615-6358</h3>
+                  <h3 class="menu-card-title">Phone : 0813-4615-6358</h3>
                   <div class="square"></div>
                 </div>
               </form>
